WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156000
REGRESSION: Yosemite-only: com.apple.WebKit.Plugin.32.Development crashed in PluginProcessShim.dylib: WebKit::shimMachVMMap + 26
https://bugs.webkit.org/show_bug.cgi?id=156000
Summary
REGRESSION: Yosemite-only: com.apple.WebKit.Plugin.32.Development crashed in ...
David Kilzer (:ddkilzer)
Reported
2016-03-29 18:37:30 PDT
When built with AddressSanitizer, com.apple.WebKit.Plugin.32.Development crashes on Yosemite (10.10.x) in PluginProcessShim.dylib: WebKit::shimMachVMMap(). We should just disable ASan support for WebKit::shimMachVMMap() on Yosemite.
Attachments
Patch v1
(1.79 KB, patch)
2016-03-29 18:40 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2016-03-29 18:38:18 PDT
<
rdar://problem/25272133
>
David Kilzer (:ddkilzer)
Comment 2
2016-03-29 18:40:55 PDT
Created
attachment 275162
[details]
Patch v1
Joseph Pecoraro
Comment 3
2016-03-29 18:58:22 PDT
Comment on
attachment 275162
[details]
Patch v1 rs=me
WebKit Commit Bot
Comment 4
2016-03-29 19:50:10 PDT
Comment on
attachment 275162
[details]
Patch v1 Clearing flags on attachment: 275162 Committed
r198823
: <
http://trac.webkit.org/changeset/198823
>
WebKit Commit Bot
Comment 5
2016-03-29 19:50:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug