REGRESSION: Yosemite-only: com.apple.WebKit.Plugin.32.Development crashed in PluginProcessShim.dylib: WebKit::shimMachVMMap + 26 <http://webkit.org/b/156000> <rdar://problem/25272133>

Reviewed by Joseph Pecoraro.

* PluginProcess/mac/PluginProcessShim.mm:
(WebKit::shimMachVMMap): Add SUPPRESS_ASAN attribute on
Yosemite.


Canonical link: https://commits.webkit.org/174122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198823 268f45cc-cd09-0410-ab3c-d52691b4dbfc